--- a/ssm_gui/defaults/dialog.qss
+++ b/ssm_gui/defaults/dialog.qss
@@ -31,6 +31,13 @@ QPushButton:hover { /* when user selects item using mouse or keyboard */
     color: "#3B3838";
 }
 
+QComboBox {
+    font-family: "Arial";
+    font-size: 14px;
+    font-weight: bold;
+    color: "#dbdbd9";
+}
+
 QLineEdit{
     color: "#f5f3eb";
     font: bold 16px;
