adding doc and fixes

--- a/ssm_gui/defaults/dialog.qss
+++ b/ssm_gui/defaults/dialog.qss
@@ -10,8 +10,6 @@ QWidget{
 }
 
 
-
-
 QPushButton {
     background-color: "#3B3838"; /* sets background of the menu */
     border: 0px;
@@ -34,6 +32,13 @@ QPushButton:hover { /* when user selects item using mouse or keyboard */
 QComboBox {
     font-family: "Arial";
     font-size: 14px;
+    font-weight: bold;
+    color: "#dbdbd9";
+}
+
+QComboBox QListView {
+    font-family: "Arial";
+    font-size: 20px;
     font-weight: bold;
     color: "#dbdbd9";
 }
